training working locally

--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from typing import Tuple, List, Dict, Any"
+    "from typing import Tuple, List, Dict, Any\n",
+    "import functools\n",
+    "import time"
    ]
   },
   {
@@ -75,6 +77,7 @@
     "    \"\"\" Rectified-Linear Unit. \"\"\"\n",
     "    return jnp.maximum(0, x)\n",
     "\n",
+    "@functools.partial(jax.vmap, in_axes=(None, 0))\n",
     "def predict(\n",
     "    params: List[Tuple[jnp.DeviceArray]],\n",
     "    image: jnp.DeviceArray,\n",
@@ -105,7 +108,7 @@
     ") -> jnp.DeviceArray:\n",
     "    \"\"\" Accuracy of one-hot image prediction compared to target. \"\"\"\n",
     "    target_class = jnp.argmax(targets, axis=1)\n",
-    "    predict_class = jnp.argmax(batched_predict(params, images), axis=1)\n",
+    "    predict_class = jnp.argmax(predict(params, images), axis=1)\n",
     "    return jnp.mean(predict_class == target_class)\n",
     "\n",
     "\n",
@@ -115,7 +118,7 @@
     "    targets: jnp.DeviceArray,\n",
     ") -> jnp.DeviceArray:\n",
     "    \"\"\" Categorical cross entropy? \"\"\"\n",
-    "    return -jnp.mean(batched_predict(params, images) * targets)\n",
+    "    return -jnp.mean(predict(params, images) * targets)\n",
     "\n",
     "\n",
     "@jax.jit\n",
@@ -140,37 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyperparameters\n",
-    "LAYERS = [784, 512, 512, 10]\n",
-    "STEP_SIZE = 0.01\n",
-    "NUM_EPOCHS = 10\n",
-    "BATCH_SIZE = 128\n",
-    "N_TARGETS = 10 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = init_network_params(LAYERS, RANDOM_KEY)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "import tensorflow_datasets as tfds\n",
+    "\n",
     "DATA_DIR = '/tmp/tfds'\n",
     "\n",
     "# Load the full MNIST dataset\n",
@@ -192,15 +167,14 @@
     "test_labels = test_data['label']\n",
     "test_labels = one_hot(test_labels, num_labels)\n",
     "test_images = test_data['image']\n",
-    "test_images = jnp.reshape(test_images, (len(test_images), num_pixels))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_images = jnp.reshape(test_images, (len(test_images), num_pixels))\n",
+    "\n",
+    "def get_train_batches():\n",
+    "    \"\"\" Dataloader function returns batches of training data. \"\"\"\n",
+    "    ds = tfds.load(name='mnist', split='train', as_supervised=True, data_dir=DATA_DIR)\n",
+    "    ds = ds.batch(BATCH_SIZE).prefetch(1)\n",
+    "    return tfds.as_numpy(ds)\n",
+    "\n",
     "print(f'Train: {train_images.shape}, {train_labels.shape}')\n",
     "print(f'Test: {test_images.shape}, {test_labels.shape}')"
    ]
@@ -211,13 +185,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
+    "# Hyperparameters\n",
+    "LAYERS = [784, 512, 512, 10]\n",
+    "STEP_SIZE = 0.01\n",
+    "NUM_EPOCHS = 10\n",
+    "BATCH_SIZE = 128\n",
+    "N_TARGETS = 10 \n",
     "\n",
-    "def get_train_batches():\n",
-    "    \"\"\" Dataloader function returns batches of training data. \"\"\"\n",
-    "    ds = tfds.load(name='mnist', split='train', as_supervised=True, data_dir=DATA_DIR)\n",
-    "    ds = ds.batch(BATCH_SIZE).prefetch(1)\n",
-    "    return tfds.as_numpy(ds)\n",
+    "params = init_network_params(LAYERS, RANDOM_KEY)\n",
     "\n",
     "# training loop\n",
     "for epoch in range(NUM_EPOCHS):\n",
