--- a/main.ipynb
+++ b/main.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Tuple, List, Dict, Any\n",
     "import functools\n",
-    "import time"
+    "import time\n",
+    "import math\n"
    ]
   },
   {
@@ -19,7 +20,10 @@
    "outputs": [],
    "source": [
     "import wandb\n",
-    "wandb.login()"
+    "\n",
+    "WANDB_PROJECT = 'minisweep'\n",
+    "\n",
+    "wandb.login()\n"
    ]
   },
   {
@@ -35,13 +39,13 @@
     "RANDOM_KEY = jax.random.PRNGKey(42)\n",
     "\n",
     "# what is this being run on?\n",
-    "print(f'jax.device_count() {jax.device_count()}')\n",
-    "print(f'jax.local_device_count() {jax.local_device_count()}')\n",
+    "print(f\"jax.device_count() {jax.device_count()}\")\n",
+    "print(f\"jax.local_device_count() {jax.local_device_count()}\")\n",
     "for i, device in enumerate(jax.devices()):\n",
-    "    print(f' --- Found device: {i} ')\n",
-    "    print(f'\\t device_kind: {device.device_kind}')\n",
-    "    print(f'\\t platform: {device.platform}')\n",
-    "    print(f'\\t host_id: {device.host_id}')"
+    "    print(f\" --- Found device: {i} \")\n",
+    "    print(f\"\\t device_kind: {device.device_kind}\")\n",
+    "    print(f\"\\t platform: {device.platform}\")\n",
+    "    print(f\"\\t host_id: {device.host_id}\")\n"
    ]
   },
   {
@@ -51,38 +55,37 @@
    "outputs": [],
    "source": [
     "def random_layer_params(\n",
-    "        input_size: int,\n",
-    "        output_size: int,\n",
-    "        random_key: jnp.DeviceArray,\n",
-    "        scale: float = 1e-2) -> Tuple[jnp.DeviceArray]:\n",
-    "    \"\"\" Creates a single layer of an MLP. \"\"\"\n",
+    "    input_size: int, output_size: int, random_key: jnp.DeviceArray, scale: float = 1e-2\n",
+    ") -> Tuple[jnp.DeviceArray]:\n",
+    "    \"\"\"Creates a single layer of an MLP.\"\"\"\n",
     "    w_key, b_key = jax.random.split(random_key)\n",
     "    return scale * jax.random.normal(\n",
     "        w_key, (output_size, input_size)\n",
-    "    ), scale * jax.random.normal(\n",
-    "        b_key, (output_size,))\n",
+    "    ), scale * jax.random.normal(b_key, (output_size,))\n",
     "\n",
     "\n",
     "def init_network_params(\n",
-    "        layer_sizes: List[int],\n",
-    "        random_key: jnp.DeviceArray) -> List[Tuple[jnp.DeviceArray]]:\n",
-    "    \"\"\" Initialize a N-layer MLP. \"\"\"\n",
+    "    layer_sizes: List[int], random_key: jnp.DeviceArray\n",
+    ") -> List[Tuple[jnp.DeviceArray]]:\n",
+    "    \"\"\"Initialize a N-layer MLP.\"\"\"\n",
     "    layer_keys = jax.random.split(random_key, len(layer_sizes))\n",
     "    network_params: List[Tuple[jnp.DeviceArray]] = []\n",
     "    for in_size, out_size, key in zip(layer_sizes[:-1], layer_sizes[1:], layer_keys):\n",
     "        network_params.append(random_layer_params(in_size, out_size, key))\n",
     "    return network_params\n",
     "\n",
+    "\n",
     "def relu(x: jnp.DeviceArray) -> jnp.DeviceArray:\n",
-    "    \"\"\" Rectified-Linear Unit. \"\"\"\n",
+    "    \"\"\"Rectified-Linear Unit.\"\"\"\n",
     "    return jnp.maximum(0, x)\n",
+    "\n",
     "\n",
     "@functools.partial(jax.vmap, in_axes=(None, 0))\n",
     "def predict(\n",
     "    params: List[Tuple[jnp.DeviceArray]],\n",
     "    image: jnp.DeviceArray,\n",
     ") -> jnp.DeviceArray:\n",
-    "    \"\"\" Forward prediction with an MLP denoted by params. \"\"\"\n",
+    "    \"\"\"Forward prediction with an MLP denoted by params.\"\"\"\n",
     "    x: jnp.DeviceArray = image\n",
     "    for w, b in params[:-1]:\n",
     "        x = relu(jnp.dot(w, x) + b)\n",
@@ -92,12 +95,13 @@
     "    # log of the sum of exponentials of input elements\n",
     "    return x - jax.scipy.special.logsumexp(x)\n",
     "\n",
+    "\n",
     "def one_hot(\n",
     "    x: jnp.DeviceArray,\n",
     "    k: int,\n",
     "    dtype=jnp.float32,\n",
     ") -> jnp.DeviceArray:\n",
-    "    \"\"\" One-hot encoding of size k. \"\"\"\n",
+    "    \"\"\"One-hot encoding of size k.\"\"\"\n",
     "    return jnp.array(x[:, None] == jnp.arange(k), dtype)\n",
     "\n",
     "\n",
@@ -106,7 +110,7 @@
     "    images: jnp.DeviceArray,\n",
     "    targets: jnp.DeviceArray,\n",
     ") -> jnp.DeviceArray:\n",
-    "    \"\"\" Accuracy of one-hot image prediction compared to target. \"\"\"\n",
+    "    \"\"\"Accuracy of one-hot image prediction compared to target.\"\"\"\n",
     "    target_class = jnp.argmax(targets, axis=1)\n",
     "    predict_class = jnp.argmax(predict(params, images), axis=1)\n",
     "    return jnp.mean(predict_class == target_class)\n",
@@ -117,7 +121,7 @@
     "    images: jnp.DeviceArray,\n",
     "    targets: jnp.DeviceArray,\n",
     ") -> jnp.DeviceArray:\n",
-    "    \"\"\" Categorical cross entropy? \"\"\"\n",
+    "    \"\"\"Categorical cross entropy?\"\"\"\n",
     "    return -jnp.mean(predict(params, images) * targets)\n",
     "\n",
     "\n",
@@ -126,15 +130,18 @@
     "    params: List[Tuple[jnp.DeviceArray]],\n",
     "    images: jnp.DeviceArray,\n",
     "    targets: jnp.DeviceArray,\n",
+    "    learning_rate: float = 1e-3,\n",
     ") -> List[Tuple[jnp.DeviceArray]]:\n",
     "    grads = jax.grad(loss)(params, images, targets)\n",
     "    return [\n",
     "        (\n",
     "            # updated weight\n",
-    "            w - STEP_SIZE*dw,\n",
+    "            w - learning_rate * dw,\n",
     "            # updated bias\n",
-    "            b - STEP_SIZE*db\n",
-    "        ) for (w, b), (dw, db) in zip(params, grads)]"
+    "            b - learning_rate * db,\n",
+    "        )\n",
+    "        for (w, b), (dw, db) in zip(params, grads)\n",
+    "    ]\n"
    ]
   },
   {
@@ -146,37 +153,75 @@
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
     "\n",
-    "DATA_DIR = '/tmp/tfds'\n",
+    "DATA_DIR = \"/tmp/tfds\"\n",
     "\n",
     "# Load the full MNIST dataset\n",
-    "mnist_data, info = tfds.load(name='mnist', batch_size=-1, data_dir=DATA_DIR, with_info=True)\n",
+    "mnist_data, info = tfds.load(\n",
+    "    name=\"mnist\", batch_size=-1, data_dir=DATA_DIR, with_info=True\n",
+    ")\n",
     "mnist_data = tfds.as_numpy(mnist_data)\n",
-    "train_data = mnist_data['train']\n",
-    "test_data = mnist_data['test']\n",
-    "num_labels = info.features['label'].num_classes\n",
-    "h, w, c = info.features['image'].shape\n",
+    "train_data = mnist_data[\"train\"]\n",
+    "test_data = mnist_data[\"test\"]\n",
+    "num_labels = info.features[\"label\"].num_classes\n",
+    "h, w, c = info.features[\"image\"].shape\n",
     "num_pixels = h * w * c\n",
     "\n",
     "# Train dataset\n",
-    "train_labels = train_data['label']\n",
+    "train_labels = train_data[\"label\"]\n",
     "train_labels = one_hot(train_labels, num_labels)\n",
-    "train_images = train_data['image']\n",
+    "train_images = train_data[\"image\"]\n",
     "train_images = jnp.reshape(train_images, (len(train_images), num_pixels))\n",
     "\n",
     "# Test dataset\n",
-    "test_labels = test_data['label']\n",
+    "test_labels = test_data[\"label\"]\n",
     "test_labels = one_hot(test_labels, num_labels)\n",
-    "test_images = test_data['image']\n",
+    "test_images = test_data[\"image\"]\n",
     "test_images = jnp.reshape(test_images, (len(test_images), num_pixels))\n",
     "\n",
+    "\n",
     "def get_train_batches():\n",
-    "    \"\"\" Dataloader function returns batches of training data. \"\"\"\n",
-    "    ds = tfds.load(name='mnist', split='train', as_supervised=True, data_dir=DATA_DIR)\n",
+    "    \"\"\"Dataloader function returns batches of training data.\"\"\"\n",
+    "    ds = tfds.load(name=\"mnist\", split=\"train\", as_supervised=True, data_dir=DATA_DIR)\n",
     "    ds = ds.batch(BATCH_SIZE).prefetch(1)\n",
     "    return tfds.as_numpy(ds)\n",
     "\n",
-    "print(f'Train: {train_images.shape}, {train_labels.shape}')\n",
-    "print(f'Test: {test_images.shape}, {test_labels.shape}')"
+    "\n",
+    "print(f\"Train: {train_images.shape}, {train_labels.shape}\")\n",
+    "print(f\"Test: {test_images.shape}, {test_labels.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://docs.wandb.ai/guides/sweeps/configuration\n",
+    "sweep_config: Dict = {\n",
+    "    \"method\": \"random\",\n",
+    "    # \"method\": 'grid',\n",
+    "    # \"method\": 'bayes',\n",
+    "    \"metric\": {\n",
+    "        \"name\": \"test_accuracy\",\n",
+    "        \"goal\": \"maximize\",\n",
+    "    },\n",
+    "    \"parameters\": {\n",
+    "        \"learning_rate\": {\n",
+    "            \"distribution\": \"log_uniform\",\n",
+    "            \"min\": math.log(1e-3),\n",
+    "            \"max\": math.log(1e-6),\n",
+    "        },\n",
+    "        \"layers\": {\n",
+    "            \"values\": [],\n",
+    "        },\n",
+    "        \"num_epochs\": {\n",
+    "            \"distribution\": \"q_log_uniform\",\n",
+    "            \"q\": 1,\n",
+    "            \"min\": math.log(5),\n",
+    "            \"max\": math.log(30),\n",
+    "        },\n",
+    "    },\n",
+    "}"
    ]
   },
   {
@@ -186,11 +231,23 @@
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "LAYERS = [784, 512, 512, 10]\n",
-    "STEP_SIZE = 0.01\n",
-    "NUM_EPOCHS = 10\n",
-    "BATCH_SIZE = 128\n",
-    "N_TARGETS = 10 \n",
+    "LAYERS: List = [784, 512, 512, 10]\n",
+    "LEARNING_RATE: float = 0.01\n",
+    "NUM_EPOCHS: int = 10\n",
+    "BATCH_SIZE: int = 128\n",
+    "N_TARGETS: int = 10\n",
+    "\n",
+    "\n",
+    "wandb.init(\n",
+    "    # Set the project where this run will be logged\n",
+    "    project=WANDB_PROJECT,\n",
+    "    # Track hyperparameters and run metadata\n",
+    "    config={\n",
+    "    \"learning_rate\": 0.02,\n",
+    "    \"architecture\": \"CNN\",\n",
+    "    \"dataset\": \"CIFAR-100\",\n",
+    "    \"epochs\": 10,\n",
+    "    })\n",
     "\n",
     "params = init_network_params(LAYERS, RANDOM_KEY)\n",
     "\n",
@@ -200,15 +257,36 @@
     "    for images, labels in get_train_batches():\n",
     "        images = jnp.reshape(images, (len(images), num_pixels))\n",
     "        labels = one_hot(labels, num_labels)\n",
-    "        params = update(params, images, labels)\n",
+    "        params = update(params, images, labels, learning_rate=LEARNING_RATE)\n",
     "    epoch_time = time.time()\n",
-    "    \n",
+    "\n",
     "    # Re-calculating on entire dataset, this is super inneficient\n",
     "    train_accuracy = accuracy(params, train_images, train_labels)\n",
     "    test_accuracy = accuracy(params, test_images, test_labels)\n",
-    "    print(f'Epoch {epoch} started at {start_time}, total duration {epoch_time - start_time}')\n",
-    "    print(f'\\t train accuracy {train_accuracy}')\n",
-    "    print(f'\\t test accuracy {test_accuracy}')"
+    "    print(\n",
+    "        f\"Epoch {epoch} started at {start_time}, total duration {epoch_time - start_time}\"\n",
+    "    )\n",
+    "    print(f\"\\t train accuracy {train_accuracy}\")\n",
+    "    print(f\"\\t test accuracy {test_accuracy}\")\n",
+    "    wandb.log(\n",
+    "        {\n",
+    "            \"epoch\": epoch,\n",
+    "            \"start_time\": start_time,\n",
+    "            \"duration\": epoch_time - start_time,\n",
+    "            \"train_accuracy\": train_accuracy,\n",
+    "            \"test_accuracy\": test_accuracy,\n",
+    "        }\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_id = wandb.sweep(sweep_config, project=\"pytorch-sweeps-demo\")\n",
+    "wandb.agent(sweep_id, train, count=5)"
    ]
   }
  ],
