--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,7 @@
    "source": [
     "import wandb\n",
     "\n",
-    "WANDB_PROJECT = 'minisweep'\n",
-    "\n",
-    "wandb.login()\n"
+    "wandb.login()"
    ]
   },
   {
@@ -192,10 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "WANDB_PROJECT = \"minisweep\"\n",
+    "\n",
     "# https://docs.wandb.ai/guides/sweeps/configuration\n",
     "sweep_config: Dict = {\n",
     "    \"method\": \"random\",\n",
@@ -207,21 +207,24 @@
     "    },\n",
     "    \"parameters\": {\n",
     "        \"learning_rate\": {\n",
-    "            \"distribution\": \"log_uniform\",\n",
-    "            \"min\": math.log(1e-3),\n",
-    "            \"max\": math.log(1e-6),\n",
+    "            \"distribution\": \"log_uniform\", #_values\",\n",
+    "            \"min\": 1e-6,\n",
+    "            \"max\": 1e-3,\n",
     "        },\n",
     "        \"layers\": {\n",
-    "            \"values\": [],\n",
+    "            \"values\": [\n",
+    "                [128, 128, 10],\n",
+    "                [784, 512, 512, 10],\n",
+    "            ],\n",
     "        },\n",
     "        \"num_epochs\": {\n",
-    "            \"distribution\": \"q_log_uniform\",\n",
+    "            \"distribution\": \"q_log_uniform\", #_values\",\n",
     "            \"q\": 1,\n",
-    "            \"min\": math.log(5),\n",
-    "            \"max\": math.log(30),\n",
+    "            \"min\": 5,\n",
+    "            \"max\": 30,\n",
     "        },\n",
     "    },\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -230,53 +233,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyperparameters\n",
-    "LAYERS: List = [784, 512, 512, 10]\n",
-    "LEARNING_RATE: float = 0.01\n",
-    "NUM_EPOCHS: int = 10\n",
     "BATCH_SIZE: int = 128\n",
     "N_TARGETS: int = 10\n",
     "\n",
     "\n",
-    "wandb.init(\n",
-    "    # Set the project where this run will be logged\n",
-    "    project=WANDB_PROJECT,\n",
-    "    # Track hyperparameters and run metadata\n",
-    "    config={\n",
-    "    \"learning_rate\": 0.02,\n",
-    "    \"architecture\": \"CNN\",\n",
-    "    \"dataset\": \"CIFAR-100\",\n",
-    "    \"epochs\": 10,\n",
-    "    })\n",
+    "def train(config: Dict = None):\n",
+    "    \"\"\"Main training loop.\"\"\"\n",
+    "    with wandb.init(project=WANDB_PROJECT, config=config):\n",
     "\n",
-    "params = init_network_params(LAYERS, RANDOM_KEY)\n",
+    "        params = init_network_params(config.layers, RANDOM_KEY)\n",
     "\n",
-    "# training loop\n",
-    "for epoch in range(NUM_EPOCHS):\n",
-    "    start_time = time.time()\n",
-    "    for images, labels in get_train_batches():\n",
-    "        images = jnp.reshape(images, (len(images), num_pixels))\n",
-    "        labels = one_hot(labels, num_labels)\n",
-    "        params = update(params, images, labels, learning_rate=LEARNING_RATE)\n",
-    "    epoch_time = time.time()\n",
+    "        # training loop\n",
+    "        for epoch in range(config.num_epochs):\n",
+    "            start_time = time.time()\n",
+    "            for images, labels in get_train_batches():\n",
+    "                images = jnp.reshape(images, (len(images), num_pixels))\n",
+    "                labels = one_hot(labels, num_labels)\n",
+    "                params = update(params, images, labels, learning_rate=config.learning_rate)\n",
+    "            epoch_time = time.time()\n",
     "\n",
-    "    # Re-calculating on entire dataset, this is super inneficient\n",
-    "    train_accuracy = accuracy(params, train_images, train_labels)\n",
-    "    test_accuracy = accuracy(params, test_images, test_labels)\n",
-    "    print(\n",
-    "        f\"Epoch {epoch} started at {start_time}, total duration {epoch_time - start_time}\"\n",
-    "    )\n",
-    "    print(f\"\\t train accuracy {train_accuracy}\")\n",
-    "    print(f\"\\t test accuracy {test_accuracy}\")\n",
-    "    wandb.log(\n",
-    "        {\n",
-    "            \"epoch\": epoch,\n",
-    "            \"start_time\": start_time,\n",
-    "            \"duration\": epoch_time - start_time,\n",
-    "            \"train_accuracy\": train_accuracy,\n",
-    "            \"test_accuracy\": test_accuracy,\n",
-    "        }\n",
-    "    )\n"
+    "            # Re-calculating on entire dataset, this is super inneficient\n",
+    "            train_accuracy = accuracy(params, train_images, train_labels)\n",
+    "            test_accuracy = accuracy(params, test_images, test_labels)\n",
+    "            wandb.log(\n",
+    "                {\n",
+    "                    \"epoch\": epoch,\n",
+    "                    \"start_time\": start_time,\n",
+    "                    \"duration\": epoch_time - start_time,\n",
+    "                    \"train_accuracy\": train_accuracy,\n",
+    "                    \"test_accuracy\": test_accuracy,\n",
+    "                }\n",
+    "            )\n"
    ]
   },
   {
@@ -285,9 +272,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sweep_id = wandb.sweep(sweep_config, project=\"pytorch-sweeps-demo\")\n",
+    "sweep_id = wandb.sweep(sweep_config, project=WANDB_PROJECT)\n",
     "wandb.agent(sweep_id, train, count=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
