fully working locally

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,22 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from typing import Tuple, List, Dict, Any\n",
+    "from typing import Tuple, List, Dict\n",
     "import functools\n",
     "import time\n",
-    "import math\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "\n",
-    "wandb.login()"
+    "import pprint\n",
+    "import os"
    ]
   },
   {
@@ -63,9 +52,10 @@
     "\n",
     "\n",
     "def init_network_params(\n",
-    "    layer_sizes: List[int], random_key: jnp.DeviceArray\n",
+    "    layers: str, random_key: jnp.DeviceArray\n",
     ") -> List[Tuple[jnp.DeviceArray]]:\n",
     "    \"\"\"Initialize a N-layer MLP.\"\"\"\n",
+    "    layer_sizes: List[int] = [int(x) for x in layers.split(',')]\n",
     "    layer_keys = jax.random.split(random_key, len(layer_sizes))\n",
     "    network_params: List[Tuple[jnp.DeviceArray]] = []\n",
     "    for in_size, out_size, key in zip(layer_sizes[:-1], layer_sizes[1:], layer_keys):\n",
@@ -176,16 +166,36 @@
     "test_images = test_data[\"image\"]\n",
     "test_images = jnp.reshape(test_images, (len(test_images), num_pixels))\n",
     "\n",
-    "\n",
-    "def get_train_batches():\n",
+    "print(f\"Train: {train_images.shape}, {train_labels.shape}\")\n",
+    "print(f\"Test: {test_images.shape}, {test_labels.shape}\")\n",
+    "print(f\"num_pixels {num_pixels}\")\n",
+    "print(f\"num_labels {num_labels}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_train_batches(batch_size):\n",
     "    \"\"\"Dataloader function returns batches of training data.\"\"\"\n",
     "    ds = tfds.load(name=\"mnist\", split=\"train\", as_supervised=True, data_dir=DATA_DIR)\n",
-    "    ds = ds.batch(BATCH_SIZE).prefetch(1)\n",
-    "    return tfds.as_numpy(ds)\n",
+    "    ds = ds.batch(batch_size).prefetch(1)\n",
+    "    return tfds.as_numpy(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
     "\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'minisweep'\n",
     "\n",
-    "print(f\"Train: {train_images.shape}, {train_labels.shape}\")\n",
-    "print(f\"Test: {test_images.shape}, {test_labels.shape}\")\n"
+    "wandb.login()"
    ]
   },
   {
@@ -207,21 +217,30 @@
     "    },\n",
     "    \"parameters\": {\n",
     "        \"learning_rate\": {\n",
-    "            \"distribution\": \"log_uniform\", #_values\",\n",
+    "            \"distribution\": \"log_uniform\",  # _values\",\n",
     "            \"min\": 1e-6,\n",
     "            \"max\": 1e-3,\n",
     "        },\n",
     "        \"layers\": {\n",
     "            \"values\": [\n",
-    "                [128, 128, 10],\n",
-    "                [784, 512, 512, 10],\n",
+    "                \"784,128,128,10\",\n",
+    "                \"784,512,512,10\",\n",
     "            ],\n",
     "        },\n",
     "        \"num_epochs\": {\n",
-    "            \"distribution\": \"q_log_uniform\", #_values\",\n",
+    "            \"distribution\": \"q_log_uniform\",  # _values\",\n",
     "            \"q\": 1,\n",
     "            \"min\": 5,\n",
     "            \"max\": 30,\n",
+    "        },\n",
+    "        \"batch_size\": {\n",
+    "            \"value\": 128,\n",
+    "        },\n",
+    "        \"num_pixels\": {\n",
+    "            \"value\": 784,\n",
+    "        },\n",
+    "        \"num_labels\": {\n",
+    "            \"value\": 10,\n",
     "        },\n",
     "    },\n",
     "}\n"
@@ -233,11 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE: int = 128\n",
-    "N_TARGETS: int = 10\n",
-    "\n",
-    "\n",
-    "def train(config: Dict = None):\n",
+    "def train(config=None):\n",
     "    \"\"\"Main training loop.\"\"\"\n",
     "    with wandb.init(project=WANDB_PROJECT, config=config):\n",
     "\n",
@@ -246,24 +261,55 @@
     "        # training loop\n",
     "        for epoch in range(config.num_epochs):\n",
     "            start_time = time.time()\n",
-    "            for images, labels in get_train_batches():\n",
-    "                images = jnp.reshape(images, (len(images), num_pixels))\n",
-    "                labels = one_hot(labels, num_labels)\n",
-    "                params = update(params, images, labels, learning_rate=config.learning_rate)\n",
+    "            for images, labels in get_train_batches(config.batch_size):\n",
+    "                images = jnp.reshape(images, (len(images), config.num_pixels))\n",
+    "                labels = one_hot(labels, config.num_labels)\n",
+    "                params = update(\n",
+    "                    params, images, labels, learning_rate=config.learning_rate\n",
+    "                )\n",
     "            epoch_time = time.time()\n",
     "\n",
     "            # Re-calculating on entire dataset, this is super inneficient\n",
     "            train_accuracy = accuracy(params, train_images, train_labels)\n",
     "            test_accuracy = accuracy(params, test_images, test_labels)\n",
-    "            wandb.log(\n",
-    "                {\n",
-    "                    \"epoch\": epoch,\n",
-    "                    \"start_time\": start_time,\n",
-    "                    \"duration\": epoch_time - start_time,\n",
-    "                    \"train_accuracy\": train_accuracy,\n",
-    "                    \"test_accuracy\": test_accuracy,\n",
-    "                }\n",
-    "            )\n"
+    "            _out = {\n",
+    "                \"epoch\": epoch,\n",
+    "                \"start_time\": start_time,\n",
+    "                \"duration\": epoch_time - start_time,\n",
+    "                \"train_accuracy\": train_accuracy,\n",
+    "                \"test_accuracy\": test_accuracy,\n",
+    "            }\n",
+    "            wandb.log(_out)\n",
+    "            pprint.pprint(_out)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "\n",
+    "def test_train():\n",
+    "    \"\"\"Test the train function locally.\"\"\"\n",
+    "\n",
+    "    @dataclass\n",
+    "    class TestConfig:\n",
+    "        layers: str = \"784,10\"\n",
+    "        learning_rate: float = 1e-3\n",
+    "        batch_size: int = 128\n",
+    "        num_epochs: int = 1\n",
+    "        num_pixels: int = 784\n",
+    "        num_labels: int = 10\n",
+    "\n",
+    "    os.environ['WANDB_SILENT']=\"true\"\n",
+    "    train(TestConfig())\n",
+    "    os.environ['WANDB_SILENT']=\"false\"\n",
+    "\n",
+    "\n",
+    "test_train()\n"
    ]
   },
   {
@@ -273,15 +319,8 @@
    "outputs": [],
    "source": [
     "sweep_id = wandb.sweep(sweep_config, project=WANDB_PROJECT)\n",
-    "wandb.agent(sweep_id, train, count=5)"
+    "wandb.agent(sweep_id, train, count=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
