starting to debug sweeps

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,8 @@
     "import functools\n",
     "import time\n",
     "import pprint\n",
-    "import os"
+    "import os\n",
+    "import math"
    ]
   },
   {
@@ -21,9 +22,6 @@
    "source": [
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "\n",
-    "# predictably random behavior\n",
-    "RANDOM_KEY = jax.random.PRNGKey(42)\n",
     "\n",
     "# what is this being run on?\n",
     "print(f\"jax.device_count() {jax.device_count()}\")\n",
@@ -193,7 +191,7 @@
    "source": [
     "import wandb\n",
     "\n",
-    "os.environ['WANDB_NOTEBOOK_NAME'] = 'minisweep'\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'main.ipynb'\n",
     "\n",
     "wandb.login()"
    ]
@@ -217,21 +215,21 @@
     "    },\n",
     "    \"parameters\": {\n",
     "        \"learning_rate\": {\n",
-    "            \"distribution\": \"log_uniform\",  # _values\",\n",
-    "            \"min\": 1e-6,\n",
-    "            \"max\": 1e-3,\n",
+    "            \"distribution\": \"log_uniform\",\n",
+    "            \"min\": math.log(1e-4),\n",
+    "            \"max\": math.log(1e-2),\n",
     "        },\n",
     "        \"layers\": {\n",
     "            \"values\": [\n",
-    "                \"784,128,128,10\",\n",
+    "                \"784,32,32,10\",\n",
     "                \"784,512,512,10\",\n",
+    "                \"784,10\",\n",
+    "                \"784,32,10\",\n",
+    "                \"784,512,10\",\n",
     "            ],\n",
     "        },\n",
     "        \"num_epochs\": {\n",
-    "            \"distribution\": \"q_log_uniform\",  # _values\",\n",
-    "            \"q\": 1,\n",
-    "            \"min\": 5,\n",
-    "            \"max\": 30,\n",
+    "            \"value\": 10,\n",
     "        },\n",
     "        \"batch_size\": {\n",
     "            \"value\": 128,\n",
@@ -252,35 +250,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(config=None):\n",
+    "def _train(config=None, use_wandb: bool = True):\n",
     "    \"\"\"Main training loop.\"\"\"\n",
-    "    with wandb.init(project=WANDB_PROJECT, config=config):\n",
     "\n",
-    "        params = init_network_params(config.layers, RANDOM_KEY)\n",
+    "    # Initialize MLP\n",
+    "    params = init_network_params(config.layers, jax.random.PRNGKey(42))\n",
     "\n",
-    "        # training loop\n",
-    "        for epoch in range(config.num_epochs):\n",
-    "            start_time = time.time()\n",
-    "            for images, labels in get_train_batches(config.batch_size):\n",
-    "                images = jnp.reshape(images, (len(images), config.num_pixels))\n",
-    "                labels = one_hot(labels, config.num_labels)\n",
-    "                params = update(\n",
-    "                    params, images, labels, learning_rate=config.learning_rate\n",
-    "                )\n",
-    "            epoch_time = time.time()\n",
+    "    # training loop\n",
+    "    for epoch in range(config.num_epochs):\n",
+    "        start_time = time.time()\n",
+    "        for images, labels in get_train_batches(config.batch_size):\n",
+    "            images = jnp.reshape(images, (len(images), config.num_pixels))\n",
+    "            labels = one_hot(labels, config.num_labels)\n",
+    "            params = update(params, images, labels, learning_rate=config.learning_rate)\n",
+    "        epoch_time = time.time()\n",
     "\n",
-    "            # Re-calculating on entire dataset, this is super inneficient\n",
-    "            train_accuracy = accuracy(params, train_images, train_labels)\n",
-    "            test_accuracy = accuracy(params, test_images, test_labels)\n",
-    "            _out = {\n",
-    "                \"epoch\": epoch,\n",
-    "                \"start_time\": start_time,\n",
-    "                \"duration\": epoch_time - start_time,\n",
-    "                \"train_accuracy\": train_accuracy,\n",
-    "                \"test_accuracy\": test_accuracy,\n",
-    "            }\n",
+    "        # Re-calculating on entire dataset, this is super inneficient\n",
+    "        train_accuracy = accuracy(params, train_images, train_labels)\n",
+    "        test_accuracy = accuracy(params, test_images, test_labels)\n",
+    "        _out = {\n",
+    "            \"epoch\": epoch,\n",
+    "            \"start_time\": start_time,\n",
+    "            \"duration\": epoch_time - start_time,\n",
+    "            \"train_accuracy\": train_accuracy,\n",
+    "            \"test_accuracy\": test_accuracy,\n",
+    "        }\n",
+    "\n",
+    "        if use_wandb:\n",
     "            wandb.log(_out)\n",
-    "            pprint.pprint(_out)\n"
+    "        else:\n",
+    "            pprint.pprint(_out)\n",
+    "\n",
+    "def train(config=None, use_wandb: bool = True):\n",
+    "    \"\"\"Main training loop.\"\"\"\n",
+    "\n",
+    "    if use_wandb:\n",
+    "        with wandb.init(project=WANDB_PROJECT, config=config):\n",
+    "            _train(config=wandb.config, use_wandb=use_wandb)\n",
+    "    else:\n",
+    "        _train(config=config, use_wandb=use_wandb)"
    ]
   },
   {
@@ -304,9 +312,7 @@
     "        num_pixels: int = 784\n",
     "        num_labels: int = 10\n",
     "\n",
-    "    os.environ['WANDB_SILENT']=\"true\"\n",
-    "    train(TestConfig())\n",
-    "    os.environ['WANDB_SILENT']=\"false\"\n",
+    "    train(config=TestConfig(), use_wandb=False)\n",
     "\n",
     "\n",
     "test_train()\n"
@@ -321,6 +327,13 @@
     "sweep_id = wandb.sweep(sweep_config, project=WANDB_PROJECT)\n",
     "wandb.agent(sweep_id, train, count=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
