--- a/main.ipynb
+++ b/main.ipynb
@@ -30,104 +30,7 @@
     "    print(f\" --- Found device: {i} \")\n",
     "    print(f\"\\t device_kind: {device.device_kind}\")\n",
     "    print(f\"\\t platform: {device.platform}\")\n",
-    "    print(f\"\\t host_id: {device.host_id}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def random_layer_params(\n",
-    "    input_size: int, output_size: int, random_key: jnp.DeviceArray, scale: float = 1e-2\n",
-    ") -> Tuple[jnp.DeviceArray]:\n",
-    "    \"\"\"Creates a single layer of an MLP.\"\"\"\n",
-    "    w_key, b_key = jax.random.split(random_key)\n",
-    "    return scale * jax.random.normal(\n",
-    "        w_key, (output_size, input_size)\n",
-    "    ), scale * jax.random.normal(b_key, (output_size,))\n",
-    "\n",
-    "\n",
-    "def init_network_params(\n",
-    "    layers: str, random_key: jnp.DeviceArray\n",
-    ") -> List[Tuple[jnp.DeviceArray]]:\n",
-    "    \"\"\"Initialize a N-layer MLP.\"\"\"\n",
-    "    layer_sizes: List[int] = [int(x) for x in layers.split(',')]\n",
-    "    layer_keys = jax.random.split(random_key, len(layer_sizes))\n",
-    "    network_params: List[Tuple[jnp.DeviceArray]] = []\n",
-    "    for in_size, out_size, key in zip(layer_sizes[:-1], layer_sizes[1:], layer_keys):\n",
-    "        network_params.append(random_layer_params(in_size, out_size, key))\n",
-    "    return network_params\n",
-    "\n",
-    "\n",
-    "def relu(x: jnp.DeviceArray) -> jnp.DeviceArray:\n",
-    "    \"\"\"Rectified-Linear Unit.\"\"\"\n",
-    "    return jnp.maximum(0, x)\n",
-    "\n",
-    "\n",
-    "@functools.partial(jax.vmap, in_axes=(None, 0))\n",
-    "def predict(\n",
-    "    params: List[Tuple[jnp.DeviceArray]],\n",
-    "    image: jnp.DeviceArray,\n",
-    ") -> jnp.DeviceArray:\n",
-    "    \"\"\"Forward prediction with an MLP denoted by params.\"\"\"\n",
-    "    x: jnp.DeviceArray = image\n",
-    "    for w, b in params[:-1]:\n",
-    "        x = relu(jnp.dot(w, x) + b)\n",
-    "    # last layer has no activation\n",
-    "    last_w, last_b = params[-1]\n",
-    "    x = relu(jnp.dot(last_w, x) + last_b)\n",
-    "    # log of the sum of exponentials of input elements\n",
-    "    return x - jax.scipy.special.logsumexp(x)\n",
-    "\n",
-    "\n",
-    "def one_hot(\n",
-    "    x: jnp.DeviceArray,\n",
-    "    k: int,\n",
-    "    dtype=jnp.float32,\n",
-    ") -> jnp.DeviceArray:\n",
-    "    \"\"\"One-hot encoding of size k.\"\"\"\n",
-    "    return jnp.array(x[:, None] == jnp.arange(k), dtype)\n",
-    "\n",
-    "\n",
-    "def accuracy(\n",
-    "    params: List[Tuple[jnp.DeviceArray]],\n",
-    "    images: jnp.DeviceArray,\n",
-    "    targets: jnp.DeviceArray,\n",
-    ") -> jnp.DeviceArray:\n",
-    "    \"\"\"Accuracy of one-hot image prediction compared to target.\"\"\"\n",
-    "    target_class = jnp.argmax(targets, axis=1)\n",
-    "    predict_class = jnp.argmax(predict(params, images), axis=1)\n",
-    "    return jnp.mean(predict_class == target_class)\n",
-    "\n",
-    "\n",
-    "def loss(\n",
-    "    params: List[Tuple[jnp.DeviceArray]],\n",
-    "    images: jnp.DeviceArray,\n",
-    "    targets: jnp.DeviceArray,\n",
-    ") -> jnp.DeviceArray:\n",
-    "    \"\"\"Categorical cross entropy?\"\"\"\n",
-    "    return -jnp.mean(predict(params, images) * targets)\n",
-    "\n",
-    "\n",
-    "@jax.jit\n",
-    "def update(\n",
-    "    params: List[Tuple[jnp.DeviceArray]],\n",
-    "    images: jnp.DeviceArray,\n",
-    "    targets: jnp.DeviceArray,\n",
-    "    learning_rate: float = 1e-3,\n",
-    ") -> List[Tuple[jnp.DeviceArray]]:\n",
-    "    grads = jax.grad(loss)(params, images, targets)\n",
-    "    return [\n",
-    "        (\n",
-    "            # updated weight\n",
-    "            w - learning_rate * dw,\n",
-    "            # updated bias\n",
-    "            b - learning_rate * db,\n",
-    "        )\n",
-    "        for (w, b), (dw, db) in zip(params, grads)\n",
-    "    ]\n"
+    "    print(f\"\\t host_id: {device.host_id}\")"
    ]
   },
   {
@@ -140,6 +43,14 @@
     "import tensorflow_datasets as tfds\n",
     "\n",
     "DATA_DIR = \"/tmp/tfds\"\n",
+    "\n",
+    "def one_hot(\n",
+    "    x: jnp.DeviceArray,\n",
+    "    k: int,\n",
+    "    dtype=jnp.float32,\n",
+    ") -> jnp.DeviceArray:\n",
+    "    \"\"\"One-hot encoding of size k.\"\"\"\n",
+    "    return jnp.array(x[:, None] == jnp.arange(k), dtype)\n",
     "\n",
     "# Load the full MNIST dataset\n",
     "mnist_data, info = tfds.load(\n",
@@ -221,12 +132,15 @@
     "        },\n",
     "        \"layers\": {\n",
     "            \"values\": [\n",
-    "                \"784,32,32,10\",\n",
-    "                \"784,512,512,10\",\n",
-    "                \"784,10\",\n",
-    "                \"784,32,10\",\n",
-    "                \"784,512,10\",\n",
+    "                \"[1]784,32,32,10\",\n",
+    "                \"[2]784,512,512,10\",\n",
+    "                \"[3]784,10\",\n",
+    "                \"[4]784,32,10\",\n",
+    "                \"[5]784,512,10\",\n",
     "            ],\n",
+    "        },\n",
+    "        \"activation_func\": {\n",
+    "            \"value\": \"relu\",\n",
     "        },\n",
     "        \"num_epochs\": {\n",
     "            \"value\": 10,\n",
@@ -241,7 +155,7 @@
     "            \"value\": 10,\n",
     "        },\n",
     "    },\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -253,8 +167,111 @@
     "def _train(config=None, use_wandb: bool = True):\n",
     "    \"\"\"Main training loop.\"\"\"\n",
     "\n",
+    "    def random_layer_params(\n",
+    "        input_size: int,\n",
+    "        output_size: int,\n",
+    "        random_key: jnp.DeviceArray,\n",
+    "        scale: float = 1e-2,\n",
+    "    ) -> Tuple[jnp.DeviceArray]:\n",
+    "        \"\"\"Creates a single layer of an MLP.\"\"\"\n",
+    "        w_key, b_key = jax.random.split(random_key)\n",
+    "        return scale * jax.random.normal(\n",
+    "            w_key, (output_size, input_size)\n",
+    "        ), scale * jax.random.normal(b_key, (output_size,))\n",
+    "\n",
+    "    def init_network_params(\n",
+    "        layers: str, random_key: jnp.DeviceArray\n",
+    "    ) -> List[Tuple[jnp.DeviceArray]]:\n",
+    "        \"\"\"Initialize a N-layer MLP.\"\"\"\n",
+    "        layer_sizes: List[int] = [int(x) for x in layers.split(\",\")]\n",
+    "        layer_keys = jax.random.split(random_key, len(layer_sizes))\n",
+    "        network_params: List[Tuple[jnp.DeviceArray]] = []\n",
+    "        for in_size, out_size, key in zip(\n",
+    "            layer_sizes[:-1], layer_sizes[1:], layer_keys\n",
+    "        ):\n",
+    "            network_params.append(random_layer_params(in_size, out_size, key))\n",
+    "        return network_params\n",
+    "\n",
+    "    def relu(x: jnp.DeviceArray) -> jnp.DeviceArray:\n",
+    "        \"\"\"Rectified-Linear Unit.\"\"\"\n",
+    "        return jnp.maximum(0, x)\n",
+    "\n",
+    "    def leaky_relu(\n",
+    "        x: jnp.DeviceArray, leaky_slope: jnp.DeviceArray = 1e-2\n",
+    "    ) -> jnp.DeviceArray:\n",
+    "        \"\"\"Leaky Rectified-Linear Unit.\"\"\"\n",
+    "        return jnp.where(x >= 0, x, leaky_slope * x)\n",
+    "\n",
+    "    def gelu(x: jnp.DeviceArray) -> jnp.DeviceArray:\n",
+    "        \"\"\"Gaussian Error Linear Unit.\"\"\"\n",
+    "        return jnp.array(x * (jax.lax.erf(x / jnp.sqrt(2)) + 1) / 2, dtype=x.dtype)\n",
+    "\n",
+    "    @functools.partial(jax.vmap, in_axes=(None, 0))\n",
+    "    def predict(\n",
+    "        params: List[Tuple[jnp.DeviceArray]],\n",
+    "        image: jnp.DeviceArray,\n",
+    "    ) -> jnp.DeviceArray:\n",
+    "        \"\"\"Forward prediction with an MLP denoted by params.\"\"\"\n",
+    "        x: jnp.DeviceArray = image\n",
+    "        for w, b in params[:-1]:\n",
+    "            x = jnp.dot(w, x) + b\n",
+    "            if config.activation_func == \"relu\":\n",
+    "                x = relu(x)\n",
+    "            elif config.activation_func == \"gelu\":\n",
+    "                x = gelu(x)\n",
+    "            elif config.activation_func == \"leaky_relu\":\n",
+    "                x = leaky_relu(x)\n",
+    "            else:\n",
+    "                raise ValueError(\n",
+    "                    f\"Activation function {config.activation_func} is not supported\"\n",
+    "                )\n",
+    "        # last layer has no activation (logits)\n",
+    "        last_w, last_b = params[-1]\n",
+    "        x = jnp.dot(last_w, x) + last_b\n",
+    "        # log of the sum of exponentials of input elements\n",
+    "        return x - jax.scipy.special.logsumexp(x)\n",
+    "\n",
+    "    def accuracy(\n",
+    "        params: List[Tuple[jnp.DeviceArray]],\n",
+    "        images: jnp.DeviceArray,\n",
+    "        targets: jnp.DeviceArray,\n",
+    "    ) -> jnp.DeviceArray:\n",
+    "        \"\"\"Accuracy of one-hot image prediction compared to target.\"\"\"\n",
+    "        target_class = jnp.argmax(targets, axis=1)\n",
+    "        predict_class = jnp.argmax(predict(params, images), axis=1)\n",
+    "        return jnp.mean(predict_class == target_class)\n",
+    "\n",
+    "    def loss(\n",
+    "        params: List[Tuple[jnp.DeviceArray]],\n",
+    "        images: jnp.DeviceArray,\n",
+    "        targets: jnp.DeviceArray,\n",
+    "    ) -> jnp.DeviceArray:\n",
+    "        \"\"\"Categorical cross entropy?\"\"\"\n",
+    "        return -jnp.mean(predict(params, images) * targets)\n",
+    "\n",
+    "    @jax.jit\n",
+    "    def update(\n",
+    "        params: List[Tuple[jnp.DeviceArray]],\n",
+    "        images: jnp.DeviceArray,\n",
+    "        targets: jnp.DeviceArray,\n",
+    "        learning_rate: float = 1e-3,\n",
+    "    ) -> List[Tuple[jnp.DeviceArray]]:\n",
+    "        grads = jax.grad(loss)(params, images, targets)\n",
+    "        return [\n",
+    "            (\n",
+    "                # updated weight\n",
+    "                w - learning_rate * dw,\n",
+    "                # updated bias\n",
+    "                b - learning_rate * db,\n",
+    "            )\n",
+    "            for (w, b), (dw, db) in zip(params, grads)\n",
+    "        ]\n",
+    "\n",
+    "    # HACK: Remove suffix on layers needed for parallel coordinates plot\n",
+    "    layers = config.layers[3:]\n",
+    "\n",
     "    # Initialize MLP\n",
-    "    params = init_network_params(config.layers, jax.random.PRNGKey(42))\n",
+    "    params = init_network_params(layers, jax.random.PRNGKey(42))\n",
     "\n",
     "    # training loop\n",
     "    for epoch in range(config.num_epochs):\n",
@@ -262,7 +279,12 @@
     "        for images, labels in get_train_batches(config.batch_size):\n",
     "            images = jnp.reshape(images, (len(images), config.num_pixels))\n",
     "            labels = one_hot(labels, config.num_labels)\n",
-    "            params = update(params, images, labels, learning_rate=config.learning_rate)\n",
+    "            params = update(\n",
+    "                params,\n",
+    "                images,\n",
+    "                labels,\n",
+    "                learning_rate=config.learning_rate,\n",
+    "            )\n",
     "        epoch_time = time.time()\n",
     "\n",
     "        # Re-calculating on entire dataset, this is super inneficient\n",
@@ -281,12 +303,13 @@
     "        else:\n",
     "            pprint.pprint(_out)\n",
     "\n",
+    "\n",
     "def train(config=None, use_wandb: bool = True):\n",
     "    if use_wandb:\n",
     "        with wandb.init(project=WANDB_PROJECT, config=config):\n",
     "            _train(config=wandb.config, use_wandb=use_wandb)\n",
     "    else:\n",
-    "        _train(config=config, use_wandb=use_wandb)"
+    "        _train(config=config, use_wandb=use_wandb)\n"
    ]
   },
   {
@@ -303,15 +326,17 @@
     "\n",
     "    @dataclass\n",
     "    class TestConfig:\n",
-    "        layers: str = \"784,10\"\n",
+    "        layers: str = \"[1]784,10\"\n",
     "        learning_rate: float = 1e-3\n",
     "        batch_size: int = 128\n",
     "        num_epochs: int = 1\n",
     "        num_pixels: int = 784\n",
     "        num_labels: int = 10\n",
+    "        activation_func: str = 'relu'\n",
     "\n",
     "    train(config=TestConfig(), use_wandb=False)\n",
-    "\n",
+    "    train(config=TestConfig(activation_func = 'gelu'), use_wandb=False)\n",
+    "    train(config=TestConfig(activation_func = 'leaky_relu'), use_wandb=False)\n",
     "\n",
     "test_train()\n"
    ]
@@ -322,8 +347,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sweep One - sweep over layers keep activation functions constant\n",
     "sweep_id = wandb.sweep(sweep_config, project=WANDB_PROJECT)\n",
-    "wandb.agent(sweep_id, train, count=10)"
+    "wandb.agent(sweep_id, train, count=20)"
    ]
   },
   {
@@ -331,7 +357,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from copy import deepcopy\n",
+    "\n",
+    "# Sweep Two - sweep over activation functions keep layers constant\n",
+    "sweep_config_dos = deepcopy(sweep_config)\n",
+    "sweep_config_dos[\"parameters\"][\"layers\"] = {\n",
+    "    \"values\" : \"[2]784,512,512,10\"\n",
+    "}\n",
+    "sweep_config_dos[\"parameters\"][\"activation_func\"] = {\n",
+    "    \"values\" : [\"relu\", \"gelu\", \"leaky_relu\"]\n",
+    "}\n",
+    "sweep_id_dos = wandb.sweep(sweep_config_dos, project=WANDB_PROJECT)\n",
+    "wandb.agent(sweep_id_dos, train, count=20)"
+   ]
   }
  ],
  "metadata": {
