--- a/main.ipynb
+++ b/main.ipynb
@@ -363,7 +363,7 @@
     "# Sweep Two - sweep over activation functions keep layers constant\n",
     "sweep_config_dos = deepcopy(sweep_config)\n",
     "sweep_config_dos[\"parameters\"][\"layers\"] = {\n",
-    "    \"values\" : \"[2]784,512,512,10\"\n",
+    "    \"value\" : \"[2]784,512,512,10\"\n",
     "}\n",
     "sweep_config_dos[\"parameters\"][\"activation_func\"] = {\n",
     "    \"values\" : [\"relu\", \"gelu\", \"leaky_relu\"]\n",
@@ -371,6 +371,13 @@
     "sweep_id_dos = wandb.sweep(sweep_config_dos, project=WANDB_PROJECT)\n",
     "wandb.agent(sweep_id_dos, train, count=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
