activation functions chart

--- a/main.ipynb
+++ b/main.ipynb
@@ -103,7 +103,6 @@
     "import wandb\n",
     "\n",
     "os.environ['WANDB_NOTEBOOK_NAME'] = 'main.ipynb'\n",
-    "\n",
     "wandb.login()"
    ]
   },
@@ -370,6 +369,64 @@
     "}\n",
     "sweep_id_dos = wandb.sweep(sweep_config_dos, project=WANDB_PROJECT)\n",
     "wandb.agent(sweep_id_dos, train, count=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "def relu(x: jnp.DeviceArray) -> jnp.DeviceArray:\n",
+    "    \"\"\"Rectified-Linear Unit.\"\"\"\n",
+    "    return jnp.maximum(0, x)\n",
+    "\n",
+    "def leaky_relu(\n",
+    "    x: jnp.DeviceArray, leaky_slope: jnp.DeviceArray = 1e-2\n",
+    ") -> jnp.DeviceArray:\n",
+    "    \"\"\"Leaky Rectified-Linear Unit.\"\"\"\n",
+    "    return jnp.where(x >= 0, x, leaky_slope * x)\n",
+    "\n",
+    "def gelu(x: jnp.DeviceArray) -> jnp.DeviceArray:\n",
+    "    \"\"\"Gaussian Error Linear Unit.\"\"\"\n",
+    "    return jnp.array(x * (jax.lax.erf(x / jnp.sqrt(2)) + 1) / 2, dtype=x.dtype)\n",
+    "\n",
+    "x = jnp.linspace(-1.0, 1.0, 100)\n",
+    "y_relu = jax.lax.map(relu,x)\n",
+    "y_leaky_relu = jax.lax.map(leaky_relu,x)\n",
+    "y_gelu = jax.lax.map(gelu,x)\n",
+    "\n",
+    "plt.scatter(x, y_relu, label='ReLU')\n",
+    "plt.scatter(x, y_leaky_relu, label='Leaky ReLU')\n",
+    "plt.scatter(x, y_gelu, label='GeLU')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "wandb.login()\n",
+    "\n",
+    "with wandb.init(project=WANDB_PROJECT):\n",
+    "    wandb.log(\n",
+    "        {\n",
+    "            \"Activation Functions\": wandb.plot.line_series(\n",
+    "                xs=x,\n",
+    "                ys=[y_relu, y_leaky_relu, y_gelu],\n",
+    "                keys=[\"ReLU\", \"Leaky ReLU\", \"GeLU\"],\n",
+    "                title=\"Activation Functions\",\n",
+    "                xname=\"input\",\n",
+    "            )\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
